--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,9 @@
     "start_url": "./",
     "icons": [
         {
-            "src": "./icono.png",
-            "type": "image/png",
-            "sizes": "512x512"
+           "src": "./icono.jpg",
+            "type": "image/jpg",
+            "sizes": "520x520"
         }
     ]
 }
